--- a/data-understanding.ipynb
+++ b/data-understanding.ipynb
@@ -9,13 +9,14 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-16T09:39:14.289799Z",
-     "start_time": "2025-06-16T09:39:14.199679Z"
+     "end_time": "2025-06-16T11:16:30.384251Z",
+     "start_time": "2025-06-16T11:16:30.341104Z"
     }
    },
    "cell_type": "code",
    "source": [
     "import pandas as pd\n",
+    "\n",
     "\n",
     "data = pd.read_csv('data/data_nasabah.csv', delimiter=';')\n",
     "\n",
@@ -45,6 +46,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Pandas version: 2.3.0\n",
       "Jumlah data (baris, kolom): (100, 10)\n",
       "\n",
       "Informasi tipe data dan skema pengkodean:\n",
@@ -111,7 +113,6 @@
       "4                      YA          800  \n",
       "\n",
       "Jumlah nilai unik untuk setiap kolom:\n",
-      "<class 'pandas.core.indexes.base.Index'>\n",
       "nasabah_id: 100\n",
       "umur: 40\n",
       "jenis_kelamin: 2\n",
@@ -125,7 +126,7 @@
      ]
     }
    ],
-   "execution_count": 8
+   "execution_count": 2
   }
  ],
  "metadata": {
