Rename notebooks for clarity and update content structure

--- a/data-scraping.ipynb
+++ b/data-scraping.ipynb
@@ -5,7 +5,11 @@
    "cell_type": "markdown",
    "source": [
     "\n",
-    "### Data Scraping"
+    "# Data Scraping\n",
+    "**Libraries:**\n",
+    "- [Pandas](https://pandas.pydata.org/)\n",
+    "- [BeautifulSoup](https://www.crummy.com/software/BeautifulSoup/bs4/doc/)\n",
+    "- [Requests](https://docs.python-requests.org/en/latest/)\n"
    ],
    "id": "721606899e978acf"
   },
@@ -127,7 +131,7 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": " **Exercise:**[Web Scraping Paginate](https://www.scrapethissite.com/pages/forms/)",
+   "source": " **Exercise:** [Web Scraping Paginate](https://www.scrapethissite.com/pages/forms/)",
    "id": "a604a31d128600d9"
   },
   {
@@ -237,29 +241,8 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": " **Exercise:**[Web Scraping with API](https://www.scrapethissite.com/pages/api/)",
+   "source": " **Exercise:** [Web Scraping with API](https://www.scrapethissite.com/pages/api/)",
    "id": "6c9ff0ab32f2f05f"
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-06-16T09:43:09.958404Z",
-     "start_time": "2025-06-16T09:43:09.951109Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "",
-   "id": "c8633175824bdd51",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "50b4bbf4d6b7c8d0"
   }
  ],
  "metadata": {
