Refactor data exploration and scraping notebooks for improved clarity and structure

--- a/data-scraping.ipynb
+++ b/data-scraping.ipynb
@@ -23,18 +23,52 @@
    "cell_type": "code",
    "id": "initial_id",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2025-06-17T05:45:31.686841Z",
+     "start_time": "2025-06-17T05:45:31.525697Z"
+    }
    },
    "source": [
     "import pandas as pd\n",
+    "from termcolor import cprint\n",
     "# Read the CSV file\n",
-    "data = pd.read_csv('data/data.csv', delimiter=';')\n",
-    "# Display 5 rows of the DataFrame\n",
-    "print(data.head(5))\n",
-    "print(data.shape)"
+    "data = pd.read_csv('data/data_nasabah.csv', delimiter=';')\n",
+    "\n",
+    "\n",
+    "cprint(f\"Data (Rows, Columns): {data.shape}\", \"green\") # Display the shape of the DataFrame (rows, columns)\n",
+    "print(data.head(5)) # Display 5 rows of the DataFrame"
    ],
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001B[32mData (Rows, Columns): (100, 10)\u001B[0m\n",
+      "  nasabah_id  umur jenis_kelamin  pendapatan  saldo_rata_rata  \\\n",
+      "0       N001    22     Perempuan     5800000          1508000   \n",
+      "1       N002    64     Perempuan     5700000          1254000   \n",
+      "2       N003    27     Perempuan     2950000           590000   \n",
+      "3       N004    34     Perempuan     3100000           186000   \n",
+      "4       N005    45     Laki-Laki     6700000          1474000   \n",
+      "\n",
+      "   jumlah_transaksi  jenis_produk  frekuensi_kunjungi_cabang  \\\n",
+      "0                19      tabungan                          1   \n",
+      "1                 9  kartu_kredit                          2   \n",
+      "2                12      tabungan                          1   \n",
+      "3                16      deposito                          5   \n",
+      "4                15  kartu_kredit                          3   \n",
+      "\n",
+      "  pengguna_mobile_banking  skor_kredit  \n",
+      "0                   TIDAK          900  \n",
+      "1                   TIDAK          900  \n",
+      "2                      YA          500  \n",
+      "3                   TIDAK          700  \n",
+      "4                      YA          800  \n"
+     ]
+    }
+   ],
+   "execution_count": 21
   },
   {
    "metadata": {},
@@ -43,7 +77,12 @@
    "id": "cb84dbc7b3d5fc2e"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-17T05:46:01.424578Z",
+     "start_time": "2025-06-17T05:46:00.783267Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "import requests\n",
@@ -79,8 +118,17 @@
     "    print(f'Error: {response.status_code}, {response.reason}')"
    ],
    "id": "ae43d2cc1734fa65",
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                               judul\n",
+      "0  China Akan Larang Semua Film dari AS, Balas Ta...\n"
+     ]
+    }
+   ],
+   "execution_count": 25
   },
   {
    "metadata": {},
@@ -89,10 +137,14 @@
    "id": "33f0e29f4548ea77"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-17T05:45:36.650778Z",
+     "start_time": "2025-06-17T05:45:32.854263Z"
+    }
+   },
    "cell_type": "code",
    "source": [
-    "import csv\n",
     "\n",
     "url = 'https://www.scrapethissite.com/pages/simple/'\n",
     "# Send a GET request to the URL\n",
@@ -101,7 +153,7 @@
     "# Parse the HTML content using BeautifulSoup\n",
     "soup = BeautifulSoup(response.text, 'html.parser')\n",
     "country_blocks = soup.find_all('div', class_='col-md-4 country')\n",
-    "print(f\"Found {len(country_blocks)} countries.\")\n",
+    "cprint(f\"Found {len(country_blocks)} countries.\", \"green\")\n",
     "\n",
     "# Extract country data\n",
     "countries = []\n",
@@ -122,11 +174,31 @@
     "print(df_countries.head(10))\n",
     "\n",
     "# Save to CSV\n",
-    "df_countries.to_csv('data/countries.csv', index=False, quoting=csv.QUOTE_NONNUMERIC)\n"
+    "# df_countries.to_csv('data/countries.csv', index=False, quoting=csv.QUOTE_NONNUMERIC)\n"
    ],
    "id": "83e7cc1f5f35b271",
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "URL: https://www.scrapethissite.com/pages/simple/ Status Code: 200, Reason: OK\n",
+      "\u001B[32mFound 250 countries.\u001B[0m\n",
+      "                   name           capital population       area\n",
+      "0               Andorra  Andorra la Vella      84000      468.0\n",
+      "1  United Arab Emirates         Abu Dhabi    4975593    82880.0\n",
+      "2           Afghanistan             Kabul   29121286   647500.0\n",
+      "3   Antigua and Barbuda        St. John's      86754      443.0\n",
+      "4              Anguilla        The Valley      13254      102.0\n",
+      "5               Albania            Tirana    2986952    28748.0\n",
+      "6               Armenia           Yerevan    2968000    29800.0\n",
+      "7                Angola            Luanda   13068161  1246700.0\n",
+      "8            Antarctica              None          0      1.4E7\n",
+      "9             Argentina      Buenos Aires   41343201  2766890.0\n"
+     ]
+    }
+   ],
+   "execution_count": 23
   },
   {
    "metadata": {},
@@ -137,8 +209,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-16T05:44:01.149936Z",
-     "start_time": "2025-06-16T05:43:50.521478Z"
+     "end_time": "2025-06-17T05:45:47.479824Z",
+     "start_time": "2025-06-17T05:45:36.942338Z"
     }
    },
    "cell_type": "code",
@@ -187,12 +259,11 @@
     "df_teams = pd.DataFrame(teams)\n",
     "# Display the DataFrame\n",
     "print(f\"Title: {soup.title.string}\")\n",
-    "print(f\"Found {len(df_teams)} teams.\")\n",
+    "cprint(f\"Found {len(df_teams)} teams.\", \"green\")\n",
     "print(df_teams.head(10))\n",
     "\n",
     "# Save to CSV\n",
-    "df_teams.to_csv('data/teams.csv', index=False, quoting=csv.QUOTE_NONNUMERIC)\n",
-    "print(\"Data saved to data/teams.csv\")"
+    "# df_teams.to_csv('data/teams.csv', index=False, quoting=csv.QUOTE_NONNUMERIC)"
    ],
    "id": "208ed3444e68238c",
    "outputs": [
@@ -208,7 +279,7 @@
       "Page 5 URL: https://www.scrapethissite.com/pages/forms/?page_num=5&per_page=100 Status Code: 200, Reason: OK\n",
       "Page 6 URL: https://www.scrapethissite.com/pages/forms/?page_num=6&per_page=100 Status Code: 200, Reason: OK\n",
       "Title: Hockey Teams: Forms, Searching and Pagination | Scrape This Site | A public sandbox for learning web scraping\n",
-      "Found 582 teams.\n",
+      "\u001B[32mFound 582 teams.\u001B[0m\n",
       "               Team Name  Year Wins Losses OT Losses  Win % Goal For (GF)  \\\n",
       "0          Boston Bruins  1990   44     24             0.55           299   \n",
       "1         Buffalo Sabres  1990   31     30            0.388           292   \n",
@@ -231,12 +302,11 @@
       "6               276   -38  \n",
       "7               254    86  \n",
       "8               266   -10  \n",
-      "9               249    24  \n",
-      "Data saved to data/teams.csv\n"
+      "9               249    24  \n"
      ]
     }
    ],
-   "execution_count": 41
+   "execution_count": 24
   },
   {
    "metadata": {},
