--- a/data-exploration.ipynb
+++ b/data-exploration.ipynb
@@ -9,40 +9,48 @@
   {
    "metadata": {},
    "cell_type": "raw",
-   "source": "1. Describing Data",
+   "source": "1. Describing Data / Mendeskripsikan Data",
    "id": "d9f2c318dd8bf7fb"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-16T16:16:34.031834Z",
-     "start_time": "2025-06-16T16:16:33.063368Z"
+     "end_time": "2025-06-17T05:45:09.507822Z",
+     "start_time": "2025-06-17T05:45:09.345274Z"
     }
    },
    "cell_type": "code",
    "source": [
     "import pandas as pd\n",
+    "from termcolor import cprint\n",
     "\n",
     "\n",
     "data = pd.read_csv('data/data_nasabah.csv', delimiter=';')\n",
     "\n",
     "# Jumlah data (baris dan kolom)\n",
-    "print(f\"Jumlah data (baris, kolom): {data.shape}\")\n",
+    "cprint(f\"Jumlah data (baris, kolom): {data.shape}\", \"green\")\n",
     "\n",
     "# Informasi tentang tipe data dan skema pengkodean\n",
-    "print(\"\\nInformasi tipe data dan skema pengkodean:\")\n",
+    "cprint(\"\\nInformasi tipe data dan skema pengkodean:\", \"green\")\n",
     "print(data.info())\n",
     "\n",
     "# Statistik deskriptif untuk data numerik\n",
-    "print(\"\\nStatistik deskriptif untuk data numerik:\")\n",
+    "cprint(\"\\nStatistik deskriptif untuk data numerik:\", \"green\")\n",
     "print(data.describe())\n",
     "\n",
     "# Melihat beberapa baris pertama dari data\n",
-    "print(\"\\nBeberapa baris pertama dari data:\")\n",
+    "cprint(\"\\nBeberapa baris pertama dari data:\", \"green\")\n",
+    "print(data.head())\n",
+    "\n",
+    "# Melakukan pengkodean untuk kolom kategorikal\n",
+    "data['jenis_kelamin'] = data['jenis_kelamin'].map({'Laki-Laki': 1, 'Perempuan': 2})\n",
+    "data['jenis_produk'] = data['jenis_produk'].map({'tabungan': 1, 'kartu_kredit': 2, 'deposito': 3})\n",
+    "data['pengguna_mobile_banking'] = data['pengguna_mobile_banking'].map({'YA':1, 'TIDAK': 2})\n",
+    "cprint(f\"\\nData setelah pengkodean kolom :\", \"green\")\n",
     "print(data.head())\n",
     "\n",
     "# Menampilkan jumlah nilai unik untuk setiap kolom (untuk memahami kategori)\n",
-    "print(\"\\nJumlah nilai unik untuk setiap kolom:\")\n",
+    "cprint(\"\\nJumlah nilai unik untuk setiap kolom:\", \"green\")\n",
     "for column in data.columns:\n",
     "    print(f\"{column}: {data[column].nunique()}\")"
    ],
@@ -52,9 +60,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Jumlah data (baris, kolom): (100, 10)\n",
-      "\n",
-      "Informasi tipe data dan skema pengkodean:\n",
+      "\u001B[32mJumlah data (baris, kolom): (100, 10)\u001B[0m\n",
+      "\u001B[32m\n",
+      "Informasi tipe data dan skema pengkodean:\u001B[0m\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 100 entries, 0 to 99\n",
       "Data columns (total 10 columns):\n",
@@ -73,8 +81,8 @@
       "dtypes: int64(6), object(4)\n",
       "memory usage: 7.9+ KB\n",
       "None\n",
-      "\n",
-      "Statistik deskriptif untuk data numerik:\n",
+      "\u001B[32m\n",
+      "Statistik deskriptif untuk data numerik:\u001B[0m\n",
       "             umur    pendapatan  saldo_rata_rata  jumlah_transaksi  \\\n",
       "count  100.000000  1.000000e+02     1.000000e+02         100.00000   \n",
       "mean    43.380000  4.555500e+06     8.159000e+05          12.78000   \n",
@@ -94,8 +102,8 @@
       "50%                     3.000000   700.000000  \n",
       "75%                     4.000000   800.000000  \n",
       "max                     5.000000   900.000000  \n",
-      "\n",
-      "Beberapa baris pertama dari data:\n",
+      "\u001B[32m\n",
+      "Beberapa baris pertama dari data:\u001B[0m\n",
       "  nasabah_id  umur jenis_kelamin  pendapatan  saldo_rata_rata  \\\n",
       "0       N001    22     Perempuan     5800000          1508000   \n",
       "1       N002    64     Perempuan     5700000          1254000   \n",
@@ -116,8 +124,30 @@
       "2                      YA          500  \n",
       "3                   TIDAK          700  \n",
       "4                      YA          800  \n",
+      "\u001B[32m\n",
+      "Data setelah pengkodean kolom :\u001B[0m\n",
+      "  nasabah_id  umur  jenis_kelamin  pendapatan  saldo_rata_rata  \\\n",
+      "0       N001    22              2     5800000          1508000   \n",
+      "1       N002    64              2     5700000          1254000   \n",
+      "2       N003    27              2     2950000           590000   \n",
+      "3       N004    34              2     3100000           186000   \n",
+      "4       N005    45              1     6700000          1474000   \n",
       "\n",
-      "Jumlah nilai unik untuk setiap kolom:\n",
+      "   jumlah_transaksi  jenis_produk  frekuensi_kunjungi_cabang  \\\n",
+      "0                19             1                          1   \n",
+      "1                 9             2                          2   \n",
+      "2                12             1                          1   \n",
+      "3                16             3                          5   \n",
+      "4                15             2                          3   \n",
+      "\n",
+      "   pengguna_mobile_banking  skor_kredit  \n",
+      "0                        2          900  \n",
+      "1                        2          900  \n",
+      "2                        1          500  \n",
+      "3                        2          700  \n",
+      "4                        1          800  \n",
+      "\u001B[32m\n",
+      "Jumlah nilai unik untuk setiap kolom:\u001B[0m\n",
       "nasabah_id: 100\n",
       "umur: 40\n",
       "jenis_kelamin: 2\n",
@@ -131,7 +161,29 @@
      ]
     }
    ],
-   "execution_count": 1
+   "execution_count": 10
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "2. Data Exploration / Eksplorasi Data",
+   "id": "e6021ab6a6d9093c"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-17T05:45:09.570376Z",
+     "start_time": "2025-06-17T05:45:09.563900Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns"
+   ],
+   "id": "f88327235cc7d07b",
+   "outputs": [],
+   "execution_count": 11
   }
  ],
  "metadata": {
