--- a/data-exploration.ipynb
+++ b/data-exploration.ipynb
@@ -636,11 +636,80 @@
   },
   {
    "metadata": {},
+   "cell_type": "markdown",
+   "source": "3. Data Quality Verification / Verifikasi Kualitas Data",
+   "id": "766033fed3a2ba02"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-19T14:21:55.879191Z",
+     "start_time": "2025-06-19T14:21:55.727590Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "f0957bce83c3a906"
+   "source": [
+    "# Validasi Data Mendalam dan Detail\n",
+    "# 1. Periksa konsistensi data\n",
+    "#   - Periksa apakah nilai dalam kolom tertentu sesuai dengan batasan yang diharapkan.\n",
+    "#   - Contoh: Periksa apakah kolom 'umur' hanya bernilai positif.\n",
+    "\n",
+    "cprint(f\"\\nValidasi Umur:\", \"green\")\n",
+    "if data['umur'].min() < 0:\n",
+    "    print(f\"Terdapat nilai umur negatif perlu diperiksa lebih lanjut.\")\n",
+    "else:\n",
+    "    print(f\"Semua nilai umur valid (positif).\")\n",
+    "\n",
+    "#  - Periksa apakah kolom 'jenis_kelamin' hanya bersisi 'Laki-Laki' atau 'Perempuan'.\n",
+    "cprint(f\"\\nValidasi Jenis Kelamin:\", \"green\")\n",
+    "invalid_gender = data['jenis_kelamin'].apply(lambda x: x not in ['Laki-Laki', 'Perempuan']).sum()\n",
+    "if invalid_gender:\n",
+    "    print(f\"Terdapat {invalid_gender} nilai jenis kelamin yang tidak valid.\")\n",
+    "else:\n",
+    "    print(f\"Semua nilai jenis kelamin valid.\")\n",
+    "\n",
+    "# 2. Deteksi dan tangani duplikasi data\n",
+    "#  - Periksa apakah ada baris data yang duplikat dan hapus jika perlu.\n",
+    "cprint(f\"\\nDeteksi Duplikasi Data:\", \"green\")\n",
+    "duplicate_rows = data.duplicated().sum()\n",
+    "if duplicate_rows > 0:\n",
+    "    print(f\"\\nTerdapat {duplicate_rows} baris data duplikat.\")\n",
+    "    # data.drop_duplicates()\n",
+    "else:\n",
+    "    print(f\"Tidak ada baris data duplikat.\")\n",
+    "\n",
+    "# 3. Validasi rentang Data\n",
+    "#   - Periksa apakah nilai dalam kolom tertentu berada dalam rentang yang wajar.\n",
+    "#   Contoh: Periksa apakah kolom 'saldo_rata_rata' memiliki nilai yang realistis.\n",
+    "cprint(f\"\\nValidasi Rentang Saldo Rata-Rata:\", \"green\")\n",
+    "if data['saldo_rata_rata'].max() > 1972000: # Ganti dengan batas atas yang sesuai\n",
+    "    print(\"Terdapat nilai saldo rata-rata yang tidak realistis, perlu diperiksa.\")\n",
+    "else:\n",
+    "    print(\"Semua nilai saldo rata-rata berada dalam rentang yang wajar.\")\n",
+    "\n"
+   ],
+   "id": "4d27aab3671c5d40",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001B[32m\n",
+      "Validasi Umur:\u001B[0m\n",
+      "Semua nilai umur valid (positif).\n",
+      "\u001B[32m\n",
+      "Validasi Jenis Kelamin:\u001B[0m\n",
+      "Semua nilai jenis kelamin valid.\n",
+      "\u001B[32m\n",
+      "Deteksi Duplikasi Data:\u001B[0m\n",
+      "Tidak ada baris data duplikat.\n",
+      "\u001B[32m\n",
+      "Validasi Rentang Saldo Rata-Rata:\u001B[0m\n",
+      "Semua nilai saldo rata-rata berada dalam rentang yang wajar.\n"
+     ]
+    }
+   ],
+   "execution_count": 21
   }
  ],
  "metadata": {
