feat: Data Annotation

--- a/data-cleansing.ipynb
+++ b/data-cleansing.ipynb
@@ -15,8 +15,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-23T11:17:01.431071Z",
-     "start_time": "2025-06-23T11:17:01.216827Z"
+     "end_time": "2025-06-23T14:57:19.415579Z",
+     "start_time": "2025-06-23T14:57:19.292286Z"
     }
    },
    "cell_type": "code",
@@ -54,7 +54,7 @@
     "\n",
     "# Deskripsi statistik data\n",
     "cprint(\"\\nDeskripsi statistik data:\", \"green\")\n",
-    "print(df.describe())"
+    "print(df.describe())\n"
    ],
    "id": "fb964a8466832055",
    "outputs": [
@@ -131,7 +131,7 @@
      ]
     }
    ],
-   "execution_count": 13
+   "execution_count": 21
   },
   {
    "metadata": {},
