feat: Update data scraping notebook with enhanced examples and structure

--- a/data-scraping.ipynb
+++ b/data-scraping.ipynb
@@ -25,8 +25,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-06-17T05:45:31.686841Z",
-     "start_time": "2025-06-17T05:45:31.525697Z"
+     "end_time": "2025-06-24T23:10:14.160163Z",
+     "start_time": "2025-06-24T23:10:14.078767Z"
     }
    },
    "source": [
@@ -37,7 +37,7 @@
     "\n",
     "\n",
     "cprint(f\"Data (Rows, Columns): {data.shape}\", \"green\") # Display the shape of the DataFrame (rows, columns)\n",
-    "print(data.head(5)) # Display 5 rows of the DataFrame"
+    "print(data.head()) # Display 5 rows of the DataFrame"
    ],
    "outputs": [
     {
@@ -68,7 +68,7 @@
      ]
     }
    ],
-   "execution_count": 21
+   "execution_count": 3
   },
   {
    "metadata": {},
@@ -79,8 +79,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-17T05:46:01.424578Z",
-     "start_time": "2025-06-17T05:46:00.783267Z"
+     "end_time": "2025-06-24T23:10:16.041426Z",
+     "start_time": "2025-06-24T23:10:14.228870Z"
     }
    },
    "cell_type": "code",
@@ -128,7 +128,7 @@
      ]
     }
    ],
-   "execution_count": 25
+   "execution_count": 4
   },
   {
    "metadata": {},
@@ -139,8 +139,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-17T05:45:36.650778Z",
-     "start_time": "2025-06-17T05:45:32.854263Z"
+     "end_time": "2025-06-24T23:10:18.596067Z",
+     "start_time": "2025-06-24T23:10:16.334599Z"
     }
    },
    "cell_type": "code",
@@ -198,7 +198,7 @@
      ]
     }
    ],
-   "execution_count": 23
+   "execution_count": 5
   },
   {
    "metadata": {},
@@ -209,8 +209,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-17T05:45:47.479824Z",
-     "start_time": "2025-06-17T05:45:36.942338Z"
+     "end_time": "2025-06-24T23:10:29.169282Z",
+     "start_time": "2025-06-24T23:10:18.856844Z"
     }
    },
    "cell_type": "code",
@@ -306,13 +306,67 @@
      ]
     }
    ],
-   "execution_count": 24
+   "execution_count": 6
   },
   {
    "metadata": {},
    "cell_type": "markdown",
    "source": " **Exercise:** [Web Scraping with API](https://www.scrapethissite.com/pages/api/)",
    "id": "6c9ff0ab32f2f05f"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-24T23:53:32.774265Z",
+     "start_time": "2025-06-24T23:53:31.840327Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "base_url = 'https://www.scrapethissite.com/pages/ajax-javascript/?ajax=true&year=2014'\n",
+    "response = requests.get(base_url)\n",
+    "\n",
+    "cprint(f\"Base URL: {response.url} Status Code: {response.status_code}, Reason: {response.reason}\", \"green\")\n",
+    "\n",
+    "moives_data = response.json()\n",
+    "df_movies = pd.DataFrame(moives_data)  # Display first 10 movies\n",
+    "\n",
+    "print(moives_data) # Display JSON data\n",
+    "# Display the DataFrame\n",
+    "cprint(f\"Found {len(df_movies)} movies.\", \"green\")\n",
+    "print(df_movies.to_string())\n",
+    "\n"
+   ],
+   "id": "25a4a5585c0e4913",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001B[32mBase URL: https://www.scrapethissite.com/pages/ajax-javascript/?ajax=true&year=2014 Status Code: 200, Reason: OK\u001B[0m\n",
+      "[{'title': 'Birdman', 'year': 2014, 'awards': 4, 'nominations': 9, 'best_picture': True}, {'title': 'The Grand Budapest Hotel', 'year': 2014, 'awards': 4, 'nominations': 9}, {'title': 'Whiplash', 'year': 2014, 'awards': 3, 'nominations': 5}, {'title': 'The Imitation Game', 'year': 2014, 'awards': 1, 'nominations': 8}, {'title': 'American Sniper', 'year': 2014, 'awards': 1, 'nominations': 6}, {'title': 'Boyhood', 'year': 2014, 'awards': 1, 'nominations': 6}, {'title': 'Interstellar', 'year': 2014, 'awards': 1, 'nominations': 5}, {'title': 'The Theory of Everything', 'year': 2014, 'awards': 1, 'nominations': 5}, {'title': 'Ida', 'year': 2014, 'awards': 1, 'nominations': 2}, {'title': 'Selma', 'year': 2014, 'awards': 1, 'nominations': 2}, {'title': 'Citizenfour', 'year': 2014, 'awards': 1, 'nominations': 1}, {'title': 'Big Hero 6', 'year': 2014, 'awards': 1, 'nominations': 1}, {'title': 'Crisis Hotline: Veterans Press 1', 'year': 2014, 'awards': 1, 'nominations': 1}, {'title': 'The Phone Call', 'year': 2014, 'awards': 1, 'nominations': 1}, {'title': 'Still Alice', 'year': 2014, 'awards': 1, 'nominations': 1}, {'title': 'Feast', 'year': 2014, 'awards': 1, 'nominations': 1}]\n",
+      "\u001B[32mFound 16 movies.\u001B[0m\n",
+      "                               title  year  awards  nominations best_picture\n",
+      "0                            Birdman  2014       4            9         True\n",
+      "1           The Grand Budapest Hotel  2014       4            9          NaN\n",
+      "2                           Whiplash  2014       3            5          NaN\n",
+      "3                 The Imitation Game  2014       1            8          NaN\n",
+      "4                    American Sniper  2014       1            6          NaN\n",
+      "5                            Boyhood  2014       1            6          NaN\n",
+      "6                       Interstellar  2014       1            5          NaN\n",
+      "7           The Theory of Everything  2014       1            5          NaN\n",
+      "8                                Ida  2014       1            2          NaN\n",
+      "9                              Selma  2014       1            2          NaN\n",
+      "10                       Citizenfour  2014       1            1          NaN\n",
+      "11                        Big Hero 6  2014       1            1          NaN\n",
+      "12  Crisis Hotline: Veterans Press 1  2014       1            1          NaN\n",
+      "13                    The Phone Call  2014       1            1          NaN\n",
+      "14                       Still Alice  2014       1            1          NaN\n",
+      "15                             Feast  2014       1            1          NaN\n"
+     ]
+    }
+   ],
+   "execution_count": 39
   }
  ],
  "metadata": {
