feat: Update data scraping notebook with improved structure and additional resources

--- a/data-scraping.ipynb
+++ b/data-scraping.ipynb
@@ -25,8 +25,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-07-07T03:05:30.612467Z",
-     "start_time": "2025-07-07T03:05:30.532531Z"
+     "end_time": "2025-07-07T04:42:42.521183Z",
+     "start_time": "2025-07-07T04:42:42.490517Z"
     }
    },
    "source": [
@@ -68,7 +68,7 @@
      ]
     }
    ],
-   "execution_count": 2
+   "execution_count": 1
   },
   {
    "metadata": {},
@@ -79,8 +79,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-07T03:05:32.186241Z",
-     "start_time": "2025-07-07T03:05:30.740443Z"
+     "end_time": "2025-07-07T04:42:43.547828Z",
+     "start_time": "2025-07-07T04:42:42.593733Z"
     }
    },
    "cell_type": "code",
@@ -128,7 +128,7 @@
      ]
     }
    ],
-   "execution_count": 3
+   "execution_count": 2
   },
   {
    "metadata": {},
@@ -139,8 +139,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-07T03:05:34.809757Z",
-     "start_time": "2025-07-07T03:05:32.350527Z"
+     "end_time": "2025-07-07T04:42:46.555703Z",
+     "start_time": "2025-07-07T04:42:44.083061Z"
     }
    },
    "cell_type": "code",
@@ -198,7 +198,7 @@
      ]
     }
    ],
-   "execution_count": 4
+   "execution_count": 3
   },
   {
    "metadata": {},
@@ -209,8 +209,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-07T03:05:45.880913Z",
-     "start_time": "2025-07-07T03:05:35.065079Z"
+     "end_time": "2025-07-07T04:42:59.665667Z",
+     "start_time": "2025-07-07T04:42:46.809006Z"
     }
    },
    "cell_type": "code",
@@ -306,7 +306,7 @@
      ]
     }
    ],
-   "execution_count": 5
+   "execution_count": 4
   },
   {
    "metadata": {},
@@ -317,8 +317,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-07T03:05:47.260040Z",
-     "start_time": "2025-07-07T03:05:46.244393Z"
+     "end_time": "2025-07-07T04:43:02.894389Z",
+     "start_time": "2025-07-07T04:43:02.148667Z"
     }
    },
    "cell_type": "code",
@@ -366,7 +366,7 @@
      ]
     }
    ],
-   "execution_count": 6
+   "execution_count": 5
   },
   {
    "metadata": {},
@@ -377,8 +377,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-07T03:05:48.626268Z",
-     "start_time": "2025-07-07T03:05:47.923580Z"
+     "end_time": "2025-07-07T04:43:04.275149Z",
+     "start_time": "2025-07-07T04:43:03.578002Z"
     }
    },
    "cell_type": "code",
@@ -417,7 +417,7 @@
      ]
     }
    ],
-   "execution_count": 7
+   "execution_count": 6
   },
   {
    "metadata": {},
@@ -428,8 +428,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-07T03:05:53.104108Z",
-     "start_time": "2025-07-07T03:05:49.051408Z"
+     "end_time": "2025-07-07T04:43:11.328839Z",
+     "start_time": "2025-07-07T04:43:07.528529Z"
     }
    },
    "cell_type": "code",
@@ -746,7 +746,7 @@
       "</div>\n",
       "\n",
       "<form id=\"logout-form\" action=\"https://www.scrapingcourse.com/logout\" method=\"POST\" style=\"display: none;\">\n",
-      "    <input type=\"hidden\" name=\"_token\" value=\"L1fFcjZ3Zy4BjDcAybMSJM3DRag7MqaNFofCzKv9\" autocomplete=\"off\"></form>\n",
+      "    <input type=\"hidden\" name=\"_token\" value=\"OG2KOEi48iXBCVzABh6g4ljTeY2bWYZSS7mIYvmX\" autocomplete=\"off\"></form>\n",
       "\n",
       "        </div>\n",
       "    </main>\n",
@@ -761,7 +761,7 @@
      ]
     }
    ],
-   "execution_count": 8
+   "execution_count": 7
   },
   {
    "metadata": {},
@@ -772,8 +772,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-07T03:05:56.480434Z",
-     "start_time": "2025-07-07T03:05:53.529911Z"
+     "end_time": "2025-07-07T05:24:07.921132Z",
+     "start_time": "2025-07-07T05:24:03.858245Z"
     }
    },
    "cell_type": "code",
@@ -783,16 +783,24 @@
     "session = requests.Session()\n",
     "response = session.get(url)\n",
     "soup = BeautifulSoup(response.text, 'html.parser')\n",
+    "csrf_token = soup.find('input', {'name': '_token'})['value']\n",
+    "cprint(csrf_token, 'green')\n",
     "\n",
     "\n",
     "payload = {\n",
     "    'email': 'admin@example.com',\n",
-    "    'password': 'password'\n",
+    "    'password': 'password',\n",
+    "    '_token': csrf_token\n",
     "}\n",
     "\n",
-    "response = requests.post(url, data=payload)\n",
+    "response = session.post(url, data=payload)\n",
     "\n",
-    "print(f\"Status code: {response.status_code}, Reason: {response.reason}\")"
+    "if response.status_code == 200:\n",
+    "    print('Login successful!')\n",
+    "    print(f\"URL: {response.url}, Status Code: {response.status_code}, Reason: {response.reason}\")\n",
+    "else:\n",
+    "    print('Login failed!')\n",
+    "    print(f\"Status Code: {response.status_code}, Reason: {response.reason}\")\n"
    ],
    "id": "21c07fb230baea99",
    "outputs": [
@@ -800,11 +808,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Status code: 419, Reason: <none>\n"
+      "\u001B[32mu2A8a4Qcz5oWNqaA575NKbVPyKC4PIIunnlHXDpQ\u001B[0m\n",
+      "Login successful!\n",
+      "URL: https://www.scrapingcourse.com:443/dashboard, Status Code: 200, Reason: OK\n"
      ]
     }
    ],
-   "execution_count": 9
+   "execution_count": 30
   }
  ],
  "metadata": {
