feat: Update data files and enhance playground notebook with data cleaning examples

--- a/playground.ipynb
+++ b/playground.ipynb
@@ -24,11 +24,13 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-06-24T13:32:34.654307Z",
-     "start_time": "2025-06-24T13:32:34.582847Z"
+     "end_time": "2025-07-07T07:55:53.047524Z",
+     "start_time": "2025-07-07T07:55:53.022362Z"
     }
    },
    "source": [
+    "from operator import index\n",
+    "\n",
     "import pandas as pd\n",
     "df = pd.read_csv('data/pandas_w3.csv')\n",
     "print(df)"
@@ -55,7 +57,7 @@
      ]
     }
    ],
-   "execution_count": 2
+   "execution_count": 11
   },
   {
    "metadata": {},
@@ -66,8 +68,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-24T13:32:36.676823Z",
-     "start_time": "2025-06-24T13:32:34.769268Z"
+     "end_time": "2025-07-07T07:55:54.521506Z",
+     "start_time": "2025-07-07T07:55:53.174760Z"
     }
    },
    "cell_type": "code",
@@ -189,7 +191,7 @@
      ]
     }
    ],
-   "execution_count": 3
+   "execution_count": 12
   },
   {
    "metadata": {},
@@ -200,8 +202,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-24T13:32:36.908946Z",
-     "start_time": "2025-06-24T13:32:36.866698Z"
+     "end_time": "2025-07-07T07:55:54.656390Z",
+     "start_time": "2025-07-07T07:55:54.593188Z"
     }
    },
    "cell_type": "code",
@@ -230,7 +232,7 @@
      ]
     }
    ],
-   "execution_count": 4
+   "execution_count": 13
   },
   {
    "metadata": {},
@@ -253,8 +255,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-24T13:32:37.106562Z",
-     "start_time": "2025-06-24T13:32:37.070343Z"
+     "end_time": "2025-07-07T07:55:54.767164Z",
+     "start_time": "2025-07-07T07:55:54.714132Z"
     }
    },
    "cell_type": "code",
@@ -453,7 +455,7 @@
      ]
     }
    ],
-   "execution_count": 5
+   "execution_count": 14
   },
   {
    "metadata": {},
@@ -464,8 +466,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-24T13:32:37.343680Z",
-     "start_time": "2025-06-24T13:32:37.312439Z"
+     "end_time": "2025-07-07T07:55:54.876886Z",
+     "start_time": "2025-07-07T07:55:54.853759Z"
     }
    },
    "cell_type": "code",
@@ -658,7 +660,7 @@
      ]
     }
    ],
-   "execution_count": 6
+   "execution_count": 15
   },
   {
    "metadata": {},
@@ -669,8 +671,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-24T13:33:07.034704Z",
-     "start_time": "2025-06-24T13:33:06.748547Z"
+     "end_time": "2025-07-07T07:55:55.038714Z",
+     "start_time": "2025-07-07T07:55:55.002975Z"
     }
    },
    "cell_type": "code",
@@ -860,7 +862,232 @@
      ]
     }
    ],
-   "execution_count": 8
+   "execution_count": 16
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Cleaning Wrong Format",
+   "id": "af534f95e81dda33"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "**Convert Into a Correct Format**",
+   "id": "ee5e62bb5d42b707"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-07-07T08:14:39.748332Z",
+     "start_time": "2025-07-07T08:14:39.665489Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "df = pd.read_csv('data/pandas_w3.csv')\n",
+    "\n",
+    "df['Date'] = pd.to_datetime(df['Date'], format='mixed') # Convert 'Date' column to datetime format\n",
+    "df.dropna(subset=['Date'], inplace=True) # Remove rows with invalid dates\n",
+    "\n",
+    "print(df.info())\n",
+    "print(df.to_string())"
+   ],
+   "id": "7caf19059cdb06d6",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 31 entries, 0 to 31\n",
+      "Data columns (total 5 columns):\n",
+      " #   Column    Non-Null Count  Dtype         \n",
+      "---  ------    --------------  -----         \n",
+      " 0   Duration  31 non-null     int64         \n",
+      " 1   Date      31 non-null     datetime64[ns]\n",
+      " 2   Pulse     31 non-null     int64         \n",
+      " 3   Maxpulse  31 non-null     int64         \n",
+      " 4   Calories  29 non-null     float64       \n",
+      "dtypes: datetime64[ns](1), float64(1), int64(3)\n",
+      "memory usage: 1.5 KB\n",
+      "None\n",
+      "    Duration       Date  Pulse  Maxpulse  Calories\n",
+      "0         60 2020-12-01    110       130     409.1\n",
+      "1         60 2020-12-02    117       145     479.0\n",
+      "2         60 2020-12-03    103       135     340.0\n",
+      "3         45 2020-12-04    109       175     282.4\n",
+      "4         45 2020-12-05    117       148     406.0\n",
+      "5         60 2020-12-06    102       127     300.0\n",
+      "6         60 2020-12-07    110       136     374.0\n",
+      "7        450 2020-12-08    104       134     253.3\n",
+      "8         30 2020-12-09    109       133     195.1\n",
+      "9         60 2020-12-10     98       124     269.0\n",
+      "10        60 2020-12-11    103       147     329.3\n",
+      "11        60 2020-12-12    100       120     250.7\n",
+      "12        60 2020-12-12    100       120     250.7\n",
+      "13        60 2020-12-13    106       128     345.3\n",
+      "14        60 2020-12-14    104       132     379.3\n",
+      "15        60 2020-12-15     98       123     275.0\n",
+      "16        60 2020-12-16     98       120     215.2\n",
+      "17        60 2020-12-17    100       120     300.0\n",
+      "18        45 2020-12-18     90       112       NaN\n",
+      "19        60 2020-12-19    103       123     323.0\n",
+      "20        45 2020-12-20     97       125     243.0\n",
+      "21        60 2020-12-21    108       131     364.2\n",
+      "23        60 2020-12-23    130       101     300.0\n",
+      "24        45 2020-12-24    105       132     246.0\n",
+      "25        60 2020-12-25    102       126     334.5\n",
+      "26        60 2020-12-26    100       120     250.0\n",
+      "27        60 2020-12-27     92       118     241.0\n",
+      "28        60 2020-12-28    103       132       NaN\n",
+      "29        60 2020-12-29    100       132     280.0\n",
+      "30        60 2020-12-30    102       129     380.3\n",
+      "31        60 2020-12-31     92       115     243.0\n"
+     ]
+    }
+   ],
+   "execution_count": 24
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Cleaning Wrong Data",
+   "id": "5719e73ae7cb65b9"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-07-07T08:27:00.423425Z",
+     "start_time": "2025-07-07T08:27:00.105275Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "df = pd.read_csv('data/pandas_w3.csv')\n",
+    "\n",
+    "df.loc[7, 'Duration'] = 45 # Correct the wrong value in 'Duration' column\n",
+    "\n",
+    "print(df)"
+   ],
+   "id": "bfd6239318491b18",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    Duration          Date  Pulse  Maxpulse  Calories\n",
+      "0         60  '2020/12/01'    110       130     409.1\n",
+      "1         60  '2020/12/02'    117       145     479.0\n",
+      "2         60  '2020/12/03'    103       135     340.0\n",
+      "3         45  '2020/12/04'    109       175     282.4\n",
+      "4         45  '2020/12/05'    117       148     406.0\n",
+      "5         60  '2020/12/06'    102       127     300.0\n",
+      "6         60  '2020/12/07'    110       136     374.0\n",
+      "7         45  '2020/12/08'    104       134     253.3\n",
+      "8         30  '2020/12/09'    109       133     195.1\n",
+      "9         60  '2020/12/10'     98       124     269.0\n",
+      "10        60  '2020/12/11'    103       147     329.3\n",
+      "11        60  '2020/12/12'    100       120     250.7\n",
+      "12        60  '2020/12/12'    100       120     250.7\n",
+      "13        60  '2020/12/13'    106       128     345.3\n",
+      "14        60  '2020/12/14'    104       132     379.3\n",
+      "15        60  '2020/12/15'     98       123     275.0\n",
+      "16        60  '2020/12/16'     98       120     215.2\n",
+      "17        60  '2020/12/17'    100       120     300.0\n",
+      "18        45  '2020/12/18'     90       112       NaN\n",
+      "19        60  '2020/12/19'    103       123     323.0\n",
+      "20        45  '2020/12/20'     97       125     243.0\n",
+      "21        60  '2020/12/21'    108       131     364.2\n",
+      "22        45           NaN    100       119     282.0\n",
+      "23        60  '2020/12/23'    130       101     300.0\n",
+      "24        45  '2020/12/24'    105       132     246.0\n",
+      "25        60  '2020/12/25'    102       126     334.5\n",
+      "26        60      20201226    100       120     250.0\n",
+      "27        60  '2020/12/27'     92       118     241.0\n",
+      "28        60  '2020/12/28'    103       132       NaN\n",
+      "29        60  '2020/12/29'    100       132     280.0\n",
+      "30        60  '2020/12/30'    102       129     380.3\n",
+      "31        60  '2020/12/31'     92       115     243.0\n"
+     ]
+    }
+   ],
+   "execution_count": 28
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Removing Duplicates",
+   "id": "6858915634934c5f"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-07-07T08:47:08.832445Z",
+     "start_time": "2025-07-07T08:47:08.652946Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "df = pd.read_csv('data/pandas_w3.csv')\n",
+    "df.drop_duplicates(inplace=True)  # Remove duplicate rows\n",
+    "print(df.duplicated().sum())  # Count duplicates"
+   ],
+   "id": "a68b14f221b6f430",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "execution_count": 34
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## Correlations",
+   "id": "6bbaed1a19165821"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-07-07T09:33:08.359235Z",
+     "start_time": "2025-07-07T09:33:07.568648Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "df = pd.read_csv('data/data_correlations.csv')\n",
+    "\n",
+    "print(df.to_string)"
+   ],
+   "id": "f54c9809b3d0e466",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<bound method DataFrame.to_string of      Duration  Pulse  Maxpulse  Calories\n",
+      "0          60    110       130     409.1\n",
+      "1          60    117       145     479.0\n",
+      "2          60    103       135     340.0\n",
+      "3          45    109       175     282.4\n",
+      "4          45    117       148     406.0\n",
+      "..        ...    ...       ...       ...\n",
+      "164        60    105       140     290.8\n",
+      "165        60    110       145     300.0\n",
+      "166        60    115       145     310.2\n",
+      "167        75    120       150     320.4\n",
+      "168        75    125       150     330.4\n",
+      "\n",
+      "[169 rows x 4 columns]>\n"
+     ]
+    }
+   ],
+   "execution_count": 39
   }
  ],
  "metadata": {
