feat: Update case study notebook with improved examples and filtering operations

--- a/case.ipynb
+++ b/case.ipynb
@@ -13,8 +13,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-15T11:46:56.291523Z",
-     "start_time": "2025-07-15T11:46:56.110088Z"
+     "end_time": "2025-07-15T13:39:52.926297Z",
+     "start_time": "2025-07-15T13:39:52.667231Z"
     }
    },
    "cell_type": "code",
@@ -24,12 +24,19 @@
     "\n",
     "tips = pd.read_csv('data/tips.csv', delimiter=',')\n",
     "\n",
-    "# tips.describe()\n",
-    "# tips['total_bill'].count()\n",
-    "# tips.info()\n",
+    "# Operations on Columns / Formulas in Spreadsheets\n",
     "tips['total_bill'] = tips['total_bill'] - 2\n",
     "tips['new_bill'] = tips['total_bill'] / 2\n",
-    "print(tips.head())"
+    "\n",
+    "# Filter\n",
+    "tips = tips[tips['new_bill'] > 10]\n",
+    "is_dinner = tips['time'] == 'Dinner'\n",
+    "tips = tips[is_dinner]\n",
+    "print(tips['new_bill'].count())\n",
+    "\n",
+    "print(tips)\n",
+    "\n",
+    "\n"
    ],
    "id": "e423db6f47ed99f0",
    "outputs": [
@@ -37,16 +44,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   total_bill   tip     sex smoker  day    time  size  new_bill\n",
-      "0       14.99  1.01  Female     No  Sun  Dinner     2     7.495\n",
-      "1        8.34  1.66    Male     No  Sun  Dinner     3     4.170\n",
-      "2       19.01  3.50    Male     No  Sun  Dinner     3     9.505\n",
-      "3       21.68  3.31    Male     No  Sun  Dinner     2    10.840\n",
-      "4       22.59  3.61  Female     No  Sun  Dinner     4    11.295\n"
+      "176\n",
+      "     total_bill   tip     sex smoker   day    time  size  new_bill\n",
+      "0         14.99  1.01  Female     No   Sun  Dinner     2     7.495\n",
+      "1          8.34  1.66    Male     No   Sun  Dinner     3     4.170\n",
+      "2         19.01  3.50    Male     No   Sun  Dinner     3     9.505\n",
+      "3         21.68  3.31    Male     No   Sun  Dinner     2    10.840\n",
+      "4         22.59  3.61  Female     No   Sun  Dinner     4    11.295\n",
+      "..          ...   ...     ...    ...   ...     ...   ...       ...\n",
+      "239       27.03  5.92    Male     No   Sat  Dinner     3    13.515\n",
+      "240       25.18  2.00  Female    Yes   Sat  Dinner     2    12.590\n",
+      "241       20.67  2.00    Male    Yes   Sat  Dinner     2    10.335\n",
+      "242       15.82  1.75    Male     No   Sat  Dinner     2     7.910\n",
+      "243       16.78  3.00  Female     No  Thur  Dinner     2     8.390\n",
+      "\n",
+      "[176 rows x 8 columns]\n"
      ]
     }
    ],
-   "execution_count": 55
+   "execution_count": 103
   }
  ],
  "metadata": {
